# NAI

NAI_01/: main.py  pyproject.toml
NAI_02/: main.py
NAI_03/: main.py  pyproject.toml  ratings.csv
NAI_04/: main.py  podsumowanie.md
NAI_05/: .gitignore  main.py  pyproject.toml
NAI_06/: main.py  pyproject.toml
NAI_07/: main.py  pyproject.toml
