[project]
name = "gesture-detector"
version = "1.0.0"
description = "Program do detekcji gestów dłoni z użyciem OpenCV i MediaPipe"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe==0.10.9",
    "cvzone>=1.6.1",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
